Added robonomics_liability package

--- a/robonomics_liability/package.xml
+++ b/robonomics_liability/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>robonomics_control</name>
+  <name>robonomics_liability</name>
   <version>0.0.0</version>
-  <description>The robonomics control nodes</description>
+  <description>The robonomics liability nodes</description>
   <maintainer email="mail@akru.me">Alexander Krupenkin</maintainer>
   <license>BSD3</license>
   <author email="mail@akru.me">Alexander Krupenkin</author>
@@ -10,6 +10,5 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
-  <run_depend>robonomics_market</run_depend>
 
 </package>
