--- a/robonomics_liability/package.xml
+++ b/robonomics_liability/package.xml
@@ -10,5 +10,6 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>std_srvs</run_depend>
 
 </package>
