Added install for launch files

--- a/robonomics_liability/CMakeLists.txt
+++ b/robonomics_liability/CMakeLists.txt
@@ -29,3 +29,10 @@ catkin_install_python(
     DESTINATION
         ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+install(
+    FILES
+        launch/liability.launch
+    DESTINATION
+        ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
