--- a/robonomics_market/CMakeLists.txt
+++ b/robonomics_market/CMakeLists.txt
@@ -32,3 +32,11 @@ catkin_install_python(
     DESTINATION
         ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+install(
+    FILES
+        launch/market.launch
+        launch/matcher.launch
+    DESTINATION
+        ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
