Added install for package staff

--- a/robonomics_control/CMakeLists.txt
+++ b/robonomics_control/CMakeLists.txt
@@ -11,6 +11,8 @@ catkin_python_setup()
 
 generate_messages()
 
+catkin_package()
+
 catkin_install_python(
     PROGRAMS
         scripts/distribution_node
@@ -22,5 +24,19 @@ install(
     FILES
         launch/control.launch
     DESTINATION
-        ${CATKIN_PACKAGE_SHARE_DESTINATION}
+        ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+)
+
+install(
+    FILES
+        abi/investors.json
+    DESTINATION
+        ${CATKIN_PACKAGE_SHARE_DESTINATION}/abi
+)
+
+install(
+    FILES
+        models/simple.json
+    DESTINATION
+        ${CATKIN_PACKAGE_SHARE_DESTINATION}/models
 )
