--- a/robonomics_comm/CMakeLists.txt
+++ b/robonomics_comm/CMakeLists.txt
@@ -1,9 +1,4 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(robonomics_comm)
-find_package(catkin REQUIRED
-    COMPONENTS
-        robonomics_market
-        robonomics_control
-        robonomics_liability
-    )
+find_package(catkin REQUIRED)
 catkin_metapackage()
