robonomics_liability: ENS integration, version bump

--- a/robonomics_liability/CMakeLists.txt
+++ b/robonomics_liability/CMakeLists.txt
@@ -36,6 +36,7 @@ install(
 install(
     FILES
         abi/liability.json
+        abi/factory.json
     DESTINATION
         ${CATKIN_PACKAGE_SHARE_DESTINATION}/abi
 )
