--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,1 @@
-sudo: required
-dist: trusty
-language: python 
-
-before_install:
-- sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' && sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116 && sudo apt-get update && sudo apt-get install -y ros-indigo-desktop-full
-
-install:
-- source /opt/ros/indigo/setup.bash && mkdir /tmp/ws/src -p && cd /tmp/ws && catkin init
-
-script:
-- source /opt/ros/indigo/setup.bash && cd /tmp/ws/src && git clone https://github.com/airalab/robonomics_comm && catkin build --dry-run
+language: nix 
