--- a/robonomics_lighthouse/CMakeLists.txt
+++ b/robonomics_lighthouse/CMakeLists.txt
@@ -47,3 +47,8 @@ install(
     DESTINATION
         ${CATKIN_PACKAGE_SHARE_DESTINATION}/abi
 )
+
+if (CATKIN_ENABLE_TESTING)
+    find_package(rostest REQUIRED)
+    add_rostest(tests/lighthouse.test)
+endif()
