--- a/robonomics_lighthouse/package.xml
+++ b/robonomics_lighthouse/package.xml
@@ -10,4 +10,5 @@
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>pexpect</run_depend>
+  <run_depend>ethereum_common</run_depend>
 </package>
