move signer node to ethereum_common #56

--- a/ethereum_common/CMakeLists.txt
+++ b/ethereum_common/CMakeLists.txt
@@ -197,6 +197,7 @@ catkin_install_python(
     PROGRAMS
         scripts/erc20_node
         scripts/eth_node
+        scripts/signer_node
     DESTINATION
         ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
