--- a/robonomics_msgs/CMakeLists.txt
+++ b/robonomics_msgs/CMakeLists.txt
@@ -49,6 +49,7 @@ catkin_python_setup()
 ## Generate messages in the 'msg' folder
 add_message_files(
     FILES
+        Multihash.msg
         Demand.msg
         Offer.msg
         Result.msg
