init 1.0.0-rc1 (gen4) #81

--- a/robonomics_liability/CMakeLists.txt
+++ b/robonomics_liability/CMakeLists.txt
@@ -66,6 +66,10 @@ catkin_install_python(
         tests/test_executor.py
         tests/test_player.py
         tests/test_recorder.py
+        tests/test_infochan.py
+        tests/test_messageValidator.py
+        tests/test_signer.py
+        tests/testMessages.py
     DESTINATION
         ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
