Descriptive ROS messages for Ethereum related types

--- a/ipfs_common/CMakeLists.txt
+++ b/ipfs_common/CMakeLists.txt
@@ -10,7 +10,6 @@ project(ipfs_common)
 find_package(catkin REQUIRED
     COMPONENTS
         rospy
-        robonomics_msgs
         message_generation
 )
 
@@ -47,9 +46,10 @@ catkin_python_setup()
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-# )
+add_message_files(
+    FILES
+        Multihash.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -64,10 +64,7 @@ catkin_python_setup()
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-    DEPENDENCIES
-        robonomics_msgs
-)
+generate_messages()
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
