--- a/robonomics_liability/package.xml
+++ b/robonomics_liability/package.xml
@@ -9,6 +9,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>robonomics_msgs</build_depend>
+  <build_depend>ethereum_common</build_depend>
+  <build_depend>ipfs_common</build_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>robonomics_msgs</run_depend>
+  <run_depend>ethereum_common</run_depend>
+  <run_depend>ipfs_common</run_depend>
 </package>
