--- a/aira_graph/CMakeLists.txt
+++ b/aira_graph/CMakeLists.txt
@@ -10,6 +10,7 @@ project(aira_graph)
 find_package(catkin REQUIRED
     COMPONENTS
         rospy
+        ipfs_common
         message_generation
 )
 
