--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: nix 
-script: nix-build --option binary-caches "https://hydra.aira.life https://cache.nixos.org" --option binary-cache-public-keys "hydra.aira.life-1:StgkxSYBh18tccd4KUVmxHQZEUF7ad8m10Iw4jNt5ak= cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=" release.nix
+script: make test
