Introduced liabilities execution timestamp persistence and restart/resume ros-services #62

--- a/robonomics_liability/CMakeLists.txt
+++ b/robonomics_liability/CMakeLists.txt
@@ -15,6 +15,7 @@ catkin_python_setup()
 add_message_files(
     FILES
         Liability.msg
+        LiabilityExecutionTimestamp.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -23,6 +24,7 @@ add_service_files(
         FinishLiability.srv
         StartLiability.srv
         PersistenceContainsLiability.srv
+        PersistenceLiabilityTimestamp.srv
 )
 
 generate_messages(
