Execute arbitrary liability by address #108

--- a/robonomics_liability/CMakeLists.txt
+++ b/robonomics_liability/CMakeLists.txt
@@ -28,6 +28,7 @@ add_service_files(
         CreateRosbagPlayer.srv
         StartRosbagPlayer.srv
         StopRosbagPlayer.srv
+        ReadLiability.srv
 )
 
 generate_messages(
