change added_pending_transaction format #133

--- a/ethereum_common/CMakeLists.txt
+++ b/ethereum_common/CMakeLists.txt
@@ -52,6 +52,7 @@ add_message_files(
     UInt256.msg
     TransferEvent.msg
     ApprovalEvent.msg
+    TxHash.msg
 )
 
 ## Generate services in the 'srv' folder
